Fixed the yellow header spacing FINALLY

--- a/src/styles/cards.css
+++ b/src/styles/cards.css
@@ -88,10 +88,8 @@
     padding: 0;
 } */
 
-/* @media screen and (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .friendCard {
-        width: 100%;
-        padding-left: 1rem;
-        padding-right: 1rem;
+        margin-left: 2rem;
     }
-}  */
+} 
